force-app/main/default/src/objects/MVN_MDM_Value_Mapping__mdt/MVN_MDM_Value_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>MDM Value Mapping</label>
    <pluralLabel>MDM Value Mappings</pluralLabel>
</CustomObject>