force-app/main/default/src/objects/MVN_MDM_Value_Mapping__mdt/fields/MVN_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>MVN_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>