force-app/main/default/src/objects/MVN_MDM_Value_Mapping__mdt/fields/MVN_MDM_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MVN_MDM_Field_Mapping__c</fullName>
    <label>MDM Field Mapping</label>
    <referenceTo>MVN_MDM_Field_Mapping__mdt</referenceTo>
    <relationshipLabel>MDM Value Mappings</relationshipLabel>
    <relationshipName>MVN_MDM_Value_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>