force-app/main/default/src/objects/MVN_MDM_Value_Mapping__mdt/fields/MVN_Outbound__c.field-meta.xml
<CustomField>
    <fullName>MVN_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound?</label>
    <type>Checkbox</type>
</CustomField>