force-app/main/default/src/objects/MVN_MDM_Value_Mapping__mdt/fields/MVN_SFDC_Value__c.field-meta.xml
<CustomField>
    <fullName>MVN_SFDC_Value__c</fullName>
    <label>SFDC Value</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>